# xPyD-sim

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  trigger-integration.yml
bot/: AUTHOR_POLICY.md  BOT_POLICY.md  DESIGN_PRINCIPLES.md  ENTRY.md  REVIEW_POLICY.md
docs/: DESIGN.md  DEV_LOOP.md  GAP_ANALYSIS.md
src/xpyd_sim/: calibrate.py  cli.py  scheduler.py  server.py
src/xpyd_sim/common/: helpers.py  models.py
src/xpyd_sim/prefill/: __init__.py  app.py
tests/: test_api_compliance.py  test_api_key_auth.py  test_bugfix_25.py  test_bugfix_29.py  test_bugfix_35.py  test_bugfixes_19_30.py  test_bugfixes_31_32.py  test_e2e_proxy.py  test_embeddings.py  test_helpers.py  test_m3_params.py  test_m4_config.py  test_m5_calibrate.py  test_m6_observability.py  test_m7_e2e_concurrency.py  test_m8_backward_compat.py  test_m9_scheduling.py  test_max_model_len_cap.py  test_models.py  test_models_root.py  test_prefill.py  test_regression_48_56.py  test_server.py  test_tool_calling.py
xpyd_sim/: __init__.py  cli.py  observability.py  profile.py  server.py
xpyd_sim/common/: __init__.py  helpers.py  logprobs.py  models.py  tools.py
xpyd_sim/decode/: __init__.py
xpyd_sim/prefill/: __init__.py  app.py
